--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
         "@tailwindcss/vite": "^4.1.4",
         "@tanstack/react-query": "^5.75.7",
         "axios": "^1.9.0",
+        "i18next": "^25.1.2",
+        "i18next-browser-languagedetector": "^8.1.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-i18next": "^15.5.1",
         "react-router-dom": "^6.30.0",
         "tailwindcss": "^4.1.4"
     },
